Crea entidad pedido y procedimiento almacenado

--- a/WebAppTiendaDelivery/Web.config
+++ b/WebAppTiendaDelivery/Web.config
@@ -6,7 +6,7 @@
 <configuration>
 
 	<connectionStrings>
-		<add name="cnx" connectionString="server=.;database=Negocios2023; integrated security=True"/>
+		<add name="cnx" connectionString="server=.;database=JunioNegocio2023; integrated security=True"/>
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
