--- a/WebAppTiendaDelivery/WebAppTiendaDelivery.csproj
+++ b/WebAppTiendaDelivery/WebAppTiendaDelivery.csproj
@@ -153,6 +153,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Cliente.cs" />
+    <Compile Include="Models\Pedido.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
@@ -228,6 +229,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Soluciones\Home.cshtml" />
     <Content Include="Views\Cliente\ListaClientes.cshtml" />
+    <Content Include="Views\Cliente\PedidosFechas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
