--- a/Dominio.Negocio/Dominio.Negocio.csproj
+++ b/Dominio.Negocio/Dominio.Negocio.csproj
@@ -41,10 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria_BL.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Cliente_BL.cs" />
     <Compile Include="Pais_BL.cs" />
+    <Compile Include="Producto_BL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor_BL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio.Entidades\Dominio.Entidades.csproj">
