--- a/Infraestructura.Data.SqlServer/Infraestructura.Data.SqlServer.csproj
+++ b/Infraestructura.Data.SqlServer/Infraestructura.Data.SqlServer.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria_DAL.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Cliente_DAL.cs" />
     <Compile Include="Conexion_DAL.cs" />
     <Compile Include="Pais_DAL.cs" />
+    <Compile Include="Producto_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor_DAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio.Entidades\Dominio.Entidades.csproj">
